Add invite email

--- a/Klike/email_template.html
+++ b/Klike/email_template.html
@@ -19,39 +19,30 @@
             <tr>
                 <td align="left">
                     <p>
-                    <img src="http://i11.pixs.ru/storage/6/7/2/avapng_3300959_16832672.png" style="vertical-align:middle; margin-right:20px;" height="64" width="64" border="0" alt="Avatar">
-                        <span style="color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:32px; font-weight:500;">Ray William-Johnson</span>
+                    <img src="~userImage~" style="vertical-align:middle; margin-right:20px; border-radius:50%;" height="64" width="64" border="0" alt="Avatar">
+                        <span style="color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:32px; font-weight:500;">~userName~</span>
                         </p>
                         
                         </td>
             </tr>
             <tr>
                 <td>
-                    <p style="color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:28px; font-weight:normal;padding-right:20px;">Annabel, we’re having a cool party at Dec 23! Join us on Konvene to be on top!</p>
+                    <p style="color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:28px; font-weight:normal;padding-right:20px;">We’re having a cool party! Join us on Konvene to be on top!</p>
                 </td>
             </tr>
             <tr>
                 <td align="left">
-                    <img src="http://i11.pixs.ru/storage/6/5/5/bgjpg_9314824_16832655.jpg" alt="Free" border="0" style="display:block;">
+                    <img src="~EventImage~" alt="Free" border="0" style="display:block;">
                         </td>
             </tr>
             <tr>
                 <td style="padding:10px 32px 20px;">
-                    <p>
-                    <img src="http://i11.pixs.ru/storage/6/6/9/coktailpng_9161514_16832669.png" style="vertical-align:top; margin-right:6px;" height="29" width="20" border="0" alt="Avatar">
-                        <span style="color:#b3b3bd; font-family:'Helvetica Neue', sans-serif;; font-size:22px; font-weight:normal;padding-right:20px;line-height:32px;">Party / casual dress</span>
-                        </p>
-                        <h2 style="color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:40px; font-weight:500;padding-right:20px;line-height:48px;margin:0">Beach Party</h2>
-                        <p style="color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:24px; font-weight:400;padding-right:20px;line-height:30px; margin-bottom:80px;">Dec 23, 5 miles — North Beach</p>
+                    ~EventType~
+                        <h2 style="color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:40px; font-weight:500;padding-right:20px;line-height:48px;margin:0">~EventName~</h2>
+                        <p style="color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:24px; font-weight:400;padding-right:20px;line-height:30px; margin-bottom:80px;">~EventDetails~</p>
                         <p>
-                        <img src="http://i11.pixs.ru/storage/6/7/6/avasmalljp_2396751_16832676.jpg" style="margin-right:16px;" alt="" height="51" width="50">
-                            <img src="http://i11.pixs.ru/storage/6/7/6/avasmalljp_2396751_16832676.jpg" style="margin-right:16px;" alt="" height="51" width="50">
-                                <img src="http://i11.pixs.ru/storage/6/7/6/avasmalljp_2396751_16832676.jpg" style="margin-right:16px;" alt="" height="51" width="50">
-                                    <img src="http://i11.pixs.ru/storage/6/7/6/avasmalljp_2396751_16832676.jpg" style="margin-right:16px;" alt="" height="51" width="50">
-                                        <img src="http://i11.pixs.ru/storage/6/7/6/avasmalljp_2396751_16832676.jpg" style="margin-right:16px;" alt="" height="51" width="50">
-                                            <img src="http://i11.pixs.ru/storage/6/7/6/avasmalljp_2396751_16832676.jpg" style="margin-right:16px;" alt="" height="51" width="50">
-                                                
-                                                <span style="float:right;color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:22px; font-weight:500;line-height:40px; vertical-align:top;">2.5k going</span>
+                        ~EventAttendees~
+                                                <span style="float:right;color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:22px; font-weight:500;line-height:40px; vertical-align:top;">~EventGoing~</span>
                                                 </p>
                                                 </td>
             </tr>
@@ -62,7 +53,6 @@
             </tr>
             <tr>
                 <td style="padding:50px 0 30px; text-align:center;" align="center">
-                    <p style="color:#1d2027; font-family:'Helvetica Neue', sans-serif;; font-size:22px; font-weight:500;padding-right:20px;line-height:28px;margin:0">KONVENE LOGO</p>
                     <p style="color:#b3b3bd; font-family:'Helvetica Neue', sans-serif;; font-size:22px; font-weight:400;padding-right:20px;line-height:32px;">© 2015 Poliesco LLC. All rights reserved.</p>
                 </td>
             </tr>
