Fix  url in html mail

--- a/Klike/email_template.html
+++ b/Klike/email_template.html
@@ -48,7 +48,7 @@
             </tr>
             <tr>
                 <td style="background-color:#f8f7f7; padding:15px 0;">
-                    <a href=""><img src="http://i11.pixs.ru/storage/6/6/4/buttonpng_5835487_16832664.png" alt="Get Konvene for iOS" height="112" width="640"></a>
+                    <a href="https://itunes.apple.com/ru/app/konvene-social-planning/id924906681?l=en&mt=8"><img src="http://i11.pixs.ru/storage/6/6/4/buttonpng_5835487_16832664.png" alt="Get Konvene for iOS" height="112" width="640"></a>
                 </td>
             </tr>
             <tr>
